# retro-peft-adapters

./: .editorconfig  .env.example  .pre-commit-config.yaml  ADVANCED_RESEARCH_CONTRIBUTIONS.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  CONTRIBUTING.md  GENERATION3_PLAN.md  GENERATION3_SUMMARY.md  GENERATION_1_RESEARCH_EXECUTION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_PUBLICATION_SUMMARY.md  RESEARCH_SUMMARY.md  REVOLUTIONARY_BREAKTHROUGHS_PUBLICATION_READY.md  TERRAGON_AUTONOMOUS_COMPLETION_FINAL.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_FINAL_v5.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT_v2.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT_v4.md  TERRAGON_RESEARCH_ACHIEVEMENTS_REPORT.md  autonomous_validation_runner.py  comprehensive_quality_gates.py  comprehensive_quality_gates_runner.py  comprehensive_quality_validation.py  comprehensive_quality_validation_results.json  final_comprehensive_test.py  pyproject.toml  research_validation_runner.py  test_basic.py  test_generation1.py  test_generation1_functionality.py  test_generation1_research_implementation.py  test_generation2.py  test_generation2_production.py  test_generation2_robust.py  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.terragon/: config.yaml
benchmarks/: __init__.py  autonomous_benchmarking_framework.py  benchmark_runner.py  comparative_study.py  performance_profiler.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/global/: compliance_engine.py  multi_region_orchestrator.py
deployment/kubernetes/: retro-peft-deployment.yaml
deployment/production/: breakthrough_deployment.yaml  docker-compose.production.yml
deployment/production/monitoring/: prometheus.yml
deployment/production/nginx/: nginx.conf
deployment/scripts/: deploy.sh
docs/: ROADMAP.md
docs/adr/: 0000-adr-template.md  0001-retrieval-integration-architecture.md
docs/workflows/: README.md
examples/: __init__.py  adapter_retrieval_demo.py  basic_usage.py  basic_working_example.py  breakthrough_architectures_demo.py  demo.py  generation3_scaling_demo.py  generation3_scaling_demo_lite.py  i18n_demo.py  research_demo_standalone.py  robust_features_demo.py  scaling_performance_demo.py  training_example.py
k8s-manifests/: retro-lora-api-deployment.yaml  retro-lora-retrieval-deployment.yaml
research_publication/: revolutionary_findings_2025.md
research_validation/: __init__.py  academic_publication_framework.py  advanced_comparative_study.py  advanced_research_validation.py  comparative_benchmarking.py  comprehensive_research_validation.py  publication_prep.py
src/retro_peft/: __init__.py  adapter.py  adapter_bank.py  cache.py  cache_builder.py  retro_peft.py  robust_features.py  scaling_features.py
src/retro_peft/adapters/: __init__.py  base_adapter.py  fusion_adapters.py  production_adapters.py  retro_adalora.py  retro_ia3.py  retro_lora.py  simple_adalora.py  simple_adapters.py  simple_ia3.py
src/retro_peft/api/: __init__.py  auth.py  endpoints.py  gateway.py  rate_limiter.py
src/retro_peft/autonomous/: __init__.py  progressive_quality_gates.py  self_improving_quality_engine.py
src/retro_peft/database/: __init__.py  connection.py  models.py  repositories.py
src/retro_peft/federated/: __init__.py  client.py  server.py
src/retro_peft/global_deployment/: __init__.py  advanced_internationalization.py  global_orchestrator.py
src/retro_peft/i18n/: __init__.py
src/retro_peft/inference/: __init__.py  batch_processor.py  pipeline.py
src/retro_peft/mlops/: __init__.py  experiment_tracker.py
src/retro_peft/quantum/: __init__.py  advanced_quantum_adapters.py  quantum_adapters.py
src/retro_peft/research/: __init__.py  autonomous_experimental_framework.py  breakthrough_adaptive_reasoning.py  breakthrough_research_validation.py  causal_temporal_reasoning.py  consciousness_inspired_architecture.py  cross_modal_adaptive_retrieval.py  emergent_intelligence_physics.py  meta_adaptive_hierarchical_fusion.py  neuromorphic_spike_dynamics.py  novel_algorithms.py  physics_driven_cross_modal.py  physics_inspired_neural_dynamics.py  quantum_consciousness_fusion.py  quantum_enhanced_adapters.py  recursive_metacognitive_consciousness.py  revolutionary_meta_learning.py  revolutionary_quantum_neural_hybrid.py
src/retro_peft/retrieval/: __init__.py  contextual.py  index_builder.py  mock_retriever.py  retrievers.py  robust_retrieval.py  scaling_retrieval.py  simple_index.py
src/retro_peft/scaling/: __init__.py  async_pipeline.py  async_processing.py  cache.py  distributed_processing.py  high_performance_adapters.py  high_performance_cache.py  load_balancer.py  metrics.py  orchestration.py  production_orchestrator.py  resource_pool.py  ultra_performance_engine.py
src/retro_peft/serving/: advanced_serving.py
src/retro_peft/training/: __init__.py  contrastive.py  federated_training.py  multi_task.py
src/retro_peft/utils/: __init__.py  (+13 more)
tests/: __init__.py  conftest.py  test_adapter.py  test_adapter_bank.py  test_adapters.py  test_autonomous_validation.py  test_basic.py  test_cache.py  test_generation_features.py  test_retro_peft.py
(+6 files in other folders)
